flatten XtqlOps JSON: `{:op {:insert ...}, :arg-rows [...]}` -> `{:insert ..., :arg-rows [...]}`, #2987
