# api/src/main/kotlin/xtdb/api/tx/TxOps.kt
@@ -1,14 +1,12 @@
 @file:JvmName("TxOps")
 @file:UseSerializers(AnySerde::class, InstantSerde::class)
+
 package xtdb.api.tx
 
-import kotlinx.serialization.DeserializationStrategy
-import kotlinx.serialization.SerialName
-import kotlinx.serialization.Serializable
-import kotlinx.serialization.UseSerializers
-import kotlinx.serialization.json.JsonContentPolymorphicSerializer
-import kotlinx.serialization.json.JsonElement
-import kotlinx.serialization.json.jsonObject
+import kotlinx.serialization.*
+import kotlinx.serialization.encoding.Decoder
+import kotlinx.serialization.encoding.Encoder
+import kotlinx.serialization.json.*
 import xtdb.AnySerde
 import xtdb.InstantSerde
 import xtdb.api.query.Binding
@@ -33,14 +31,8 @@ sealed interface TxOp {
             "eraseDocs" in element.jsonObject -> EraseDocs.serializer()
             "call" in element.jsonObject -> Call.serializer()
             "sql" in element.jsonObject -> Sql.serializer()
-            "op" in element.jsonObject -> XtqlAndArgs.serializer()
-            "insertInto" in element.jsonObject -> Insert.serializer()
-            "update" in element.jsonObject -> Update.serializer()
-            "deleteFrom" in element.jsonObject -> Delete.serializer()
-            "eraseFrom" in element.jsonObject -> Erase.serializer()
-            "assertExists" in element.jsonObject -> AssertExists.serializer()
-            "assertNotExists" in element.jsonObject -> AssertNotExists.serializer()
-            else -> throw jsonIAE("xtql/malformed-tx-op", element)
+            "argRows" in element.jsonObject -> XtqlAndArgs.serializer()
+            else -> XtqlOp.serializer()
         }
     }
 }
@@ -50,7 +42,7 @@ data class PutDocs(
     @JvmField @SerialName("into") val tableName: String,
     @JvmField @SerialName("putDocs") val docs: List<Map<String, *>>,
     @JvmField val validFrom: Instant? = null,
-    @JvmField val validTo: Instant? = null
+    @JvmField val validTo: Instant? = null,
 ) : TxOp {
 
     fun startingFrom(validFrom: Instant?) = copy(validFrom = validFrom)
@@ -70,7 +62,7 @@ data class DeleteDocs(
     @JvmField @SerialName("from") val tableName: String,
     @JvmField @SerialName("deleteDocs") val docIds: List<*>,
     @JvmField val validFrom: Instant? = null,
-    @JvmField val validTo: Instant? = null
+    @JvmField val validTo: Instant? = null,
 ) : TxOp {
 
     fun startingFrom(validFrom: Instant?) = copy(validFrom = validFrom)
@@ -110,40 +102,63 @@ data class SqlByteArgs(
     @JvmField val argBytes: ByteBuffer? = null,
 ) : TxOp
 
-@Serializable
+@Serializable(XtqlAndArgs.Serde::class)
 data class XtqlAndArgs(
-    @JvmField val op: Xtql,
-    @JvmField val argRows: List<Map<String, *>>? = null
+    @JvmField val op: XtqlOp,
+    @JvmField val argRows: List<Map<String, *>>? = null,
 ) : TxOp {
 
-    fun argRows(argRows : List<Map<String, *>>?) = copy(argRows = argRows)
-    fun argRows(vararg argRows : Map<String, *>) = argRows(argRows.toList())
+    object Serde : KSerializer<XtqlAndArgs> {
+        // TODO add argRows
+        override val descriptor = XtqlOp.serializer().descriptor
+
+        override fun deserialize(decoder: Decoder): XtqlAndArgs {
+            require(decoder is JsonDecoder)
+            val jsonElement = decoder.decodeJsonElement().jsonObject
+            return XtqlAndArgs(
+                decoder.json.decodeFromJsonElement<XtqlOp>(JsonObject(jsonElement - "argRows")),
+                decoder.json.decodeFromJsonElement<List<Map<String, Any>>?>(jsonElement["argRows"]!!)
+            )
+        }
+
+        override fun serialize(encoder: Encoder, value: XtqlAndArgs) {
+            require(encoder is JsonEncoder)
+            val op = encoder.json.encodeToJsonElement(value.op)
+
+            @Suppress("UNCHECKED_CAST") val argRows = encoder.json.encodeToJsonElement(value.argRows as List<Map<String, Any>>?)
+
+            return encoder.encodeJsonElement(JsonObject(op.jsonObject + ("argRows" to argRows)))
+        }
+    }
+
+    fun argRows(argRows: List<Map<String, *>>?) = copy(argRows = argRows)
+    fun argRows(vararg argRows: Map<String, *>) = argRows(argRows.toList())
 }
 
-@Serializable(Xtql.Serde::class)
-sealed interface Xtql {
+@Serializable(XtqlOp.Serde::class)
+sealed interface XtqlOp : TxOp {
 
-    object Serde : JsonContentPolymorphicSerializer<Xtql>(Xtql::class) {
-        override fun selectDeserializer(element: JsonElement): DeserializationStrategy<Xtql> = when {
-            "insertInto" in element.jsonObject ->  Insert.serializer()
+    object Serde : JsonContentPolymorphicSerializer<XtqlOp>(XtqlOp::class) {
+        override fun selectDeserializer(element: JsonElement): DeserializationStrategy<XtqlOp> = when {
+            "insertInto" in element.jsonObject -> Insert.serializer()
             "update" in element.jsonObject -> Update.serializer()
             "deleteFrom" in element.jsonObject -> Delete.serializer()
             "eraseFrom" in element.jsonObject -> Erase.serializer()
             "assertExists" in element.jsonObject -> AssertExists.serializer()
             "assertNotExists" in element.jsonObject -> AssertNotExists.serializer()
-            else -> throw jsonIAE("xtql/malformed-xtql-op", element)
+            else -> throw jsonIAE("xtql/malformed-tx-op", element)
         }
     }
 
-    fun argRows(argRows : List<Map<String, *>>?) = XtqlAndArgs(this, argRows)
-    fun argRows(vararg argRows : Map<String, *>) = argRows(argRows.toList())
+    fun argRows(argRows: List<Map<String, *>>?) = XtqlAndArgs(this, argRows)
+    fun argRows(vararg argRows: Map<String, *>) = argRows(argRows.toList())
 }
 
 @Serializable
 data class Insert(
     @JvmField @SerialName("insertInto") val table: String,
-    @JvmField val query: XtqlQuery
-) : TxOp, Xtql
+    @JvmField val query: XtqlQuery,
+) : XtqlOp
 
 fun insert(table: String, query: XtqlQuery): Insert = Insert(table, query)
 
@@ -153,8 +168,8 @@ data class Update(
     @JvmField val forValidTime: TemporalExtents? = null,
     @JvmField @SerialName("bind") val bindSpecs: List<Binding>? = null,
     @JvmField @SerialName("set") val setSpecs: List<Binding>,
-    @JvmField @SerialName("unify") val unifyClauses: List<UnifyClause>? = null
-) : TxOp, Xtql {
+    @JvmField @SerialName("unify") val unifyClauses: List<UnifyClause>? = null,
+) : XtqlOp {
 
     fun forValidTime(forValidTime: TemporalExtents) = copy(forValidTime = forValidTime)
     fun binding(bindSpecs: List<Binding>) = copy(bindSpecs = bindSpecs)
@@ -168,8 +183,8 @@ data class Delete(
     @JvmField @SerialName("deleteFrom") val table: String,
     @JvmField val forValidTime: TemporalExtents? = null,
     @JvmField @SerialName("bind") val bindSpecs: List<Binding>? = null,
-    @JvmField @SerialName("unify") val unifyClauses: List<UnifyClause>? = null
-) : TxOp, Xtql {
+    @JvmField @SerialName("unify") val unifyClauses: List<UnifyClause>? = null,
+) : XtqlOp {
 
     fun forValidTime(forValidTime: TemporalExtents) = copy(forValidTime = forValidTime)
     fun binding(bindSpecs: List<Binding>?) = copy(bindSpecs = bindSpecs)
@@ -182,8 +197,8 @@ fun delete(table: String): Delete = Delete(table)
 data class Erase(
     @JvmField @SerialName("eraseFrom") val table: String,
     @JvmField @SerialName("bind") val bindSpecs: List<Binding>? = null,
-    @JvmField @SerialName("unify") val unifyClauses: List<UnifyClause>? = null
-) : TxOp, Xtql {
+    @JvmField @SerialName("unify") val unifyClauses: List<UnifyClause>? = null,
+) : XtqlOp {
 
     fun binding(bindSpecs: List<Binding>?) = copy(bindSpecs = bindSpecs)
     fun unify(unifyClauses: List<UnifyClause>?) = Erase(table, bindSpecs, unifyClauses)
@@ -192,19 +207,19 @@ data class Erase(
 fun erase(table: String): Erase = Erase(table)
 
 @Serializable
-data class AssertExists(@JvmField @SerialName("assertExists") val query: XtqlQuery) : TxOp, Xtql
+data class AssertExists(@JvmField @SerialName("assertExists") val query: XtqlQuery) : XtqlOp
 
 fun assertExists(query: XtqlQuery) = AssertExists(query)
 
 @Serializable
-data class AssertNotExists(@JvmField @SerialName("assertNotExists") val query: XtqlQuery) : TxOp, Xtql
+data class AssertNotExists(@JvmField @SerialName("assertNotExists") val query: XtqlQuery) : XtqlOp
 
 fun assertNotExists(query: XtqlQuery) = AssertNotExists(query)
 
 @Serializable
 data class Call(
     @JvmField @SerialName("call") val fnId: Any,
-    @JvmField val args: List<Any>
+    @JvmField val args: List<Any>,
 ) : TxOp
 
 fun call(fnId: Any, args: List<Any>) = Call(fnId, args)
